@@ -137,11 +137,7 @@ case x${GRUB_TERMINAL_INPUT} in
   ;;
   x*)
     cat << EOF
-if terminal_input ${GRUB_TERMINAL_INPUT} ; then true ; else
-  # For backward compatibility with versions of terminal.mod that don't
-  # understand terminal_input
-  terminal ${GRUB_TERMINAL_INPUT}
-fi
+terminal_input ${GRUB_TERMINAL_INPUT}
 EOF
   ;;
 esac
@@ -152,11 +148,7 @@ case x${GRUB_TERMINAL_OUTPUT} in
   ;;
   x*)
     cat << EOF
-if terminal_output ${GRUB_TERMINAL_OUTPUT} ; then true ; else
-  # For backward compatibility with versions of terminal.mod that don't
-  # understand terminal_output
-  terminal ${GRUB_TERMINAL_OUTPUT}
-fi
+terminal_output ${GRUB_TERMINAL_OUTPUT}
 EOF
   ;;
 esac
