@@ -31,6 +31,12 @@
 
 2010-07-20  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* util/grub.d/00_header.in: Remove compatibility with terminal.mod
+	prior to terminal_input/terminal_output separation. It's been over 1.5
+	years and those versions weren't widely deployed.
+
+2010-07-20  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* tests/util/grub-shell-tester.in: Remove bashism and declare as
 	sh script.
 
